--- a/.github/workflows/maven-feature-java11.yml
+++ b/.github/workflows/maven-feature-java11.yml
@@ -6,15 +6,12 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Maven Build (Java 21)
+name: Maven Feature Branch Build (Java 11)
 
 on:
   push:
     branches:
-      - main
       - 'feature/**'
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -23,11 +20,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven (Java 21)
-      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install --file pom.xml
+
+    - name: Build with Maven (Java 11)
+      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install
+      
