--- a/.github/workflows/maven-main-java11.yml
+++ b/.github/workflows/maven-main-java11.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Maven Feature Branch Build (Java 11)
+name: Maven Build (Java 11)
 
 on:
   push:
