--- a/.github/workflows/maven-main-java11.yml
+++ b/.github/workflows/maven-main-java11.yml
@@ -12,7 +12,6 @@ on:
   push:
     branches:
       - main
-      - 'feature/**'
   pull_request:
     branches: [ "main" ]
 
@@ -29,6 +28,15 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+
     - name: Build with Maven (Java 11)
-      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install --file pom.xml
-      
+      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install
+
+    - name: Publish package
+      run: mvn --batch-mode deploy
+      env:
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}      
