--- a/.github/workflows/maven-main-java11.yml
+++ b/.github/workflows/maven-main-java11.yml
@@ -32,11 +32,8 @@ jobs:
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
 
-    - name: Build with Maven (Java 11)
-      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install
-
     - name: Publish package
-      run: mvn --batch-mode deploy
+      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" --batch-mode clean deploy
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}      
