--- a/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
@@ -364,7 +364,8 @@ components:
         - CALL_CENTER
         - MOBILE
         - TVM
-        - WEB
+        - WEB: 
+            Breaking Change with 1.47.11: Added new literal
         - @Deprecated LEGACY_POS: 
             Deprecated: I'm `DEPRECATED`. (since: , removed with: )
       type: string
