--- a/.github/workflows/maven-build-feature.yml
+++ b/.github/workflows/maven-build-feature.yml
@@ -5,33 +5,31 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
-name: Maven Build (Java 11)
+name: Maven Build Feature Branch
 
 on:
   push:
     branches:
-      - main
+      - 'feature/**'
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '11', '17', '21' ]
 
+    name: Maven Feature Branch Build (Java ${{ matrix.java }})
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 11
+    - name: Set up JDK (Java ${{ matrix.java }})
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: ${{ matrix.java }}
         distribution: 'temurin'
         cache: maven
-        server-id: ossrh
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
 
-    - name: Publish package
-      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" --batch-mode clean deploy
-      env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}      
+    - name: Build with Maven (Java ${{ matrix.java }})
+      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install
+      
