Fixed caching problem in openAPI spec (#35)

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -834,6 +834,18 @@ components:
           example: CHF
           nullable: false
 
+    # com.anaptecs.jeaf.junit.openapi.base.MyFirstResponse
+    MyFirstResponse:
+      type: object
+      additionalProperties: false
+      properties:
+        messages:
+          type: array
+          items:
+            $ref: '../products/product-services.yml#/components/schemas/Message'
+        data:
+          $ref: '../products/product-services.yml#/components/schemas/Offer'
+
     # com.anaptecs.jeaf.junit.openapi.base.OpenAPITestObject
     OpenAPITestObject:
       type: object
