--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -1703,6 +1703,50 @@ paths:
         'default':
           $ref: '#/components/responses/CustomErrorResponse'
     
+  /products/testDuplicateGenerics1:
+    get:
+      operationId: testDuplicateGenerics1
+      responses:
+        '201':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                $ref: '../base/product-base.yml#/components/schemas/MyFirstResponse'
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+  /products/testDuplicateGenerics2:
+    get:
+      operationId: testDuplicateGenerics2
+      responses:
+        '201':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MySecondResponse'
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
 
 security:
   - {}
@@ -1797,7 +1841,7 @@ components:
     Message:
       type: object
       additionalProperties: false
-    # com.anaptecs.jeaf.junit.rest.generics.GenericPageableResponse<com.anaptecs.jeaf.junit.rest.generics.BusinessServiceObject>
+    # com.anaptecs.jeaf.junit.rest.generics.MyGenericListResponse
     MyGenericListResponse:
       type: object
       additionalProperties: false
@@ -1814,7 +1858,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/BusinessServiceObject'
-    # com.anaptecs.jeaf.junit.rest.generics.GenericSingleValuedReponse<com.anaptecs.jeaf.junit.rest.generics.BusinessServiceObject>
+    # com.anaptecs.jeaf.junit.rest.generics.MyGenericRESTResponse
     MyGenericRESTResponse:
       type: object
       additionalProperties: false
@@ -1823,11 +1867,22 @@ components:
       properties:
         value:
           $ref: '#/components/schemas/BusinessServiceObject'
+    # com.anaptecs.jeaf.junit.rest.generics.MySecondResponse
+    MySecondResponse:
+      type: object
+      additionalProperties: false
+      properties:
+        messages:
+          type: array
+          items:
+            $ref: '#/components/schemas/Message'
+        data:
+          $ref: '#/components/schemas/Offer'
     # com.anaptecs.jeaf.junit.rest.generics.Offer
     Offer:
       type: object
       additionalProperties: false
-    # com.anaptecs.jeaf.junit.rest.generics.Response<com.anaptecs.jeaf.junit.rest.generics.Offer>
+    # com.anaptecs.jeaf.junit.rest.generics.OffersResponse
     OffersResponse:
       type: object
       additionalProperties: false
@@ -1840,7 +1895,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Offer'
-    # com.anaptecs.jeaf.junit.rest.generics.Pageable<com.anaptecs.jeaf.junit.rest.generics.BusinessServiceObject>
+    # com.anaptecs.jeaf.junit.rest.generics.PagedBusinessObjects
     PagedBusinessObjects:
       type: object
       additionalProperties: false
@@ -1855,7 +1910,7 @@ components:
           type: integer
           format: int32
           nullable: false
-    # com.anaptecs.jeaf.junit.rest.generics.Response<com.anaptecs.jeaf.junit.rest.generics.Pageable<com.anaptecs.jeaf.junit.rest.generics.BusinessServiceObject>>
+    # com.anaptecs.jeaf.junit.rest.generics.PagedBusinessObjectsResponse
     PagedBusinessObjectsResponse:
       type: object
       additionalProperties: false
