--- a/.github/workflows/maven-release-main.yml
+++ b/.github/workflows/maven-release-main.yml
@@ -6,14 +6,24 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Maven Build Main Branch
+name: Maven Release Build
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      releaseVersion:
+        description: 'Release version'
+        required: true
+        type: string
+      tagName:
+        description: 'Release tag'
+        required: true
+        type: string
 
 jobs:
   build:
-    uses: anaptecs/jeaf-project-parent/.github/workflows/maven-build-main-template.yml@main
+    uses: anaptecs/jeaf-project-parent/.github/workflows/maven-release-main-template.yml@main
+    with:
+      releaseVersion: ${{ inputs.releaseVersion }}
+      tagName: ${{ inputs.tagName }}
     secrets: inherit
