--- a/.github/workflows/maven-build-main.yml
+++ b/.github/workflows/maven-build-main.yml
@@ -6,32 +6,16 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Maven Build Main (Java 11)
+name: Maven Build Main Branch
 
 on:
+  workflow_dispatch:
+  
   push:
     branches:
       - main
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-        server-id: ossrh
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
-
-    - name: Build and Publish packages
-      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" --batch-mode clean deploy
-      env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}      
+    uses: anaptecs/jeaf-project-parent/.github/workflows/maven-build-main-template.yml@main
+    secrets: inherit
