--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -527,6 +527,14 @@ paths:
             format: int32
             minimum: 1234
             nullable: false
+        - name: deprecatedType
+          in: header
+          required: true
+          schema:
+            type: integer
+            format: int32
+            deprecated: true
+            nullable: false
       responses:
         '202':
           description: >-
