--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -518,6 +518,23 @@ paths:
           required: true
           schema:
             type: string
+        - name: deprecatedHeader
+          in: header
+          required: true
+          deprecated: true
+          schema:
+            type: integer
+            format: int32
+            minimum: 1234
+            nullable: false
+        - name: deprecatedType
+          in: header
+          required: true
+          schema:
+            type: integer
+            format: int32
+            deprecated: true
+            nullable: false
       responses:
         '202':
           description: >-
