--- a/.github/workflows/maven-build-main.yml
+++ b/.github/workflows/maven-build-main.yml
@@ -18,4 +18,6 @@ on:
 jobs:
   build:
     uses: anaptecs/jeaf-project-parent/.github/workflows/maven-build-main-template.yml@main
+    with:
+      runner: 'linux-runner-8-core'
     secrets: inherit
