--- a/jeaf-generator/pom.xml
+++ b/jeaf-generator/pom.xml
@@ -3,7 +3,7 @@
     <parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.16.4-SNAPSHOT</version>
+		<version>1.16.4</version>
     </parent>
 
     <name>JEAF Generator</name>
