Fixed #63 also for POJOs

--- a/jeaf-generator-test-pojos/pom.xml
+++ b/jeaf-generator-test-pojos/pom.xml
@@ -98,6 +98,7 @@
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generatePOJOs>true</generatePOJOs>
 					<generateEqualsAndHashCode>true</generateEqualsAndHashCode>
+					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
 					<enableSemVerForJSON>true</enableSemVerForJSON>
 					<generateHeavyExtensibleEnums>true</generateHeavyExtensibleEnums>
