--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>1.11.0</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.11.0</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.87-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.87</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.6.10</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
