Implemented and tested #80

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<jeaf.rest.api.version>1.11.0</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.11.0</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.87</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.10</jeaf.generator.messages.version>
+		<jeaf.generator.messages.version>1.6.11-SNAPSHOT</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.17</spring.boot.version>
