Implemented and tested #86

--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -177,6 +177,7 @@
 					<generateHeavyExtensibleEnums>false</generateHeavyExtensibleEnums>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
+					<generateJSONAutoDetectAnnotationOnClass>true</generateJSONAutoDetectAnnotationOnClass>
 					<enableLegacyBuilderStyle>true</enableLegacyBuilderStyle>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
 					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
