Added suffix support also to OpenAPI spec

--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -146,6 +146,8 @@
 					<validateOpenAPISpec>true</validateOpenAPISpec>
 					<enableYAML11Compatibility>true</enableYAML11Compatibility>
 					
+					<softLinkSuffix>ID</softLinkSuffix>
+					
 					<openAPISpecDependencies>
 						<dependency>
 							<groupId>com.anaptecs.jeaf.generator</groupId>
