--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -61,7 +61,8 @@
 					<typesReportName>Hello Reports</typesReportName>
 					<typesReportShowAlias>true</typesReportShowAlias>
 					<typesReportAliasRowName>Legacy Name</typesReportAliasRowName>
-					<typesReportShowPackage>true</typesReportShowPackage>
+					<typesReportShowPackage>false</typesReportShowPackage>
+					<typesReportGroupByPackage>true</typesReportGroupByPackage>
 					<typesReportStereotypes>POJO; ServiceObject; JEAFEnumeration</typesReportStereotypes>
 					
 					<generateBreakingChangesReport>true</generateBreakingChangesReport>
