Added generation of documentation about stereotype

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 		<module>jeaf-generator-test-deprecation-report</module>
 		<module>jeaf-generator-test-custom-extension</module>
 		<module>jeaf-generator-test-custom-extension-usage</module>
+		
+		<module>jeaf-generator-stereotype-docs</module>
+		<module>jeaf-generator-stereotype-docs-usage</module>
+		
 		<module>jeaf-generator-test-message-constants</module>
 		<module>jeaf-generator-test-model</module>
 		<module>jeaf-generator-test-service-objects</module>
