--- a/jeaf-generator-test-custom-extension-usage/pom.xml
+++ b/jeaf-generator-test-custom-extension-usage/pom.xml
@@ -100,6 +100,13 @@
 					<fileHeaderAuthor>JEAF Generator</fileHeaderAuthor>
 					<fileHeaderCopyright>Copyright 2004 - 2021. All rights reserved.</fileHeaderCopyright>
 					<fileHeaderVersion>JEAF Release 1.6.x</fileHeaderVersion>
+					
+					<openAPIContactName>Maven Contact</openAPIContactName>
+					<openAPIContactURL>https://www.jeaf-generator.io</openAPIContactURL>
+					<openAPIContactEmail>maven@jeaf.de</openAPIContactEmail>
+					<openAPILicenseName>Maven Custom License</openAPILicenseName>
+					<openAPILicenseURL>https://www.jeaf-generator.io/license</openAPILicenseURL>
+					<openAPITermsOfUseURL>https://www.jeaf-generator.io/terms-of-use</openAPITermsOfUseURL>
 
 					<!-- Define code formatting style -->
 					<!-- <conventionFile>anaptecs_code_guideline.xml</conventionFile> -->
