--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -5,6 +5,7 @@ info:
   version: 0.0.1
   description: >-
     This component represents the Open API interface of the accounting service.
+  termsOfService: https://www.jeaf-generator.io/terms-of-use
   contact:
     name: JEAF Development Team
     url: 'https://www.anaptecs.de/jeaf'
