Support for multivalued examples starting with in OpenAPI 3.1

--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -144,6 +144,7 @@
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateOpenAPISpec>true</generateOpenAPISpec>
 					<validateOpenAPISpec>true</validateOpenAPISpec>
+					<openAPIVersion>OPEN_API_3_0</openAPIVersion>
 					<enableYAML11Compatibility>true</enableYAML11Compatibility>
 					
 					<softLinkSuffix>ID</softLinkSuffix>
