--- a/jeaf-generator-test-service-objects-jakarta/pom.xml
+++ b/jeaf-generator-test-service-objects-jakarta/pom.xml
@@ -107,6 +107,7 @@
 
 					<generateOpenAPISpec>true</generateOpenAPISpec>
 					<validateOpenAPISpec>true</validateOpenAPISpec>
+					<openAPIVersion>OPEN_API_3_0</openAPIVersion>
 					<openAPIGenericSoftLinkType>#/components/schemas/StringCodeType</openAPIGenericSoftLinkType>
 
 					<!-- Define information that are written to file headers -->
