--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>1.11.0</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.11.0</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.90</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.13</jeaf.generator.messages.version>
+		<jeaf.test.model.version>1.0.91-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.generator.messages.version>1.6.14-SNAPSHOT</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.17</spring.boot.version>
@@ -54,7 +54,7 @@
 		<spring.security.version>5.7.10</spring.security.version>
 		<jakartaee-api.version>10.0.0</jakartaee-api.version>
 		
-		<swagger-parser.version>2.1.21</swagger-parser.version>
+		<swagger-parser.version>2.1.22</swagger-parser.version>
 		<log4j-to-slf4j.version>2.23.1</log4j-to-slf4j.version>
 		<equalsverifier.version>3.16.1</equalsverifier.version>
 		<flexmark.version>0.64.8</flexmark.version>
